# EvacuationC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  evacuationc.conf  logger.conf  scenario.json
.github/workflows/: build.yml
res/: building_test.json  one_zone_one_exit.json  three_zone_three_transit.json  two_levels.json  udsu_block_1.json
src/: CMakeLists.txt  bim_cli.c  bim_cli.h  bim_configure.c  bim_configure.h  bim_evac.c  bim_evac.h  bim_graph.c  bim_graph.h  bim_json_object.c  bim_json_object.h  bim_output.c  bim_output.h  bim_polygon_tools.c  bim_polygon_tools.h  bim_tools.c  bim_tools.h  bim_uuid.h  main.c
src/bim/: CMakeLists.txt  bim_json_object.c  bim_json_object.h
test/: CMakeLists.txt  test_bim_object.c
